# check_fm

./: .gitignore  LICENSE.fuck  README.md  package-lock.json  package.json  pyproject.toml
src/: app.py  database.py  flask_app.py  local_configs.py
src/accounts/: accounts.py  controllers.py  database.py  forms.py  login_manager.py  models.py  services.py  user.py
src/accounts/templates/accounts/: create_group.html  dashboard.html  groups.html  login.html  profile.html  signup.html  statistics.html
src/migrations/versions/: 56e1fc2aa2b3_.py  760ca0e1e7b1_.py  8004331492ab_.py  93e409dafa6b_.py  e5d367fd871f_.py
src/products/: controllers.py  forms.py  models.py  services.py
src/products/templates/products/: products_form.html
src/static/styles/: style.css
src/templates/: base.html  macros.html
