[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ilnar Gomelyanov <hibushland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.19.1"
psycopg2 = "^2.9.1"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
